<resources>
    <string name="app_name">Ramirez</string>
    <string name="fa_a_o_seu_login_na_plataforma">Faça o seu login na plataforma</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="registre_se">Registre-se</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="entrar">Entrar</string>
    <string name="todo">TODO</string>
    <string name="junte_se_a_nossa_comunidade_e_una_se_a_outros_profissionais">Junte-se a nossa comunidade e una-se a outros profissionais</string>
    <string name="encontre_profissionais_ou_destaque_o_seu_trabalho">Encontre profissionais ou destaque o seu trabalho</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="todo_2">TODO</string>
    <string name="photographer_post">photographer_post</string>
    <string name="let_cia_montenegro_sampaio">Letícia Montenegro Sampaio</string>
    <string name="_42_visualiza_es">42 visualizações</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_in_sit_amet_tellus_pharetra_fermentum_massa_feugiat_ornare_felis_curabitur_et_mattis_mi_ut_gravida_purus_dictum_dui_porttitor_hendrerit_curabitur_a_porta_augue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet tellus pharetra, fermentum massa feugiat, ornare felis. Curabitur et mattis mi. Ut gravida purus dictum dui porttitor hendrerit. Curabitur a porta augue.</string>
    <string name="publishimage">publishImage</string>
    <string name="editprofileinfo">editProfileInfo</string>
</resources>